--- a/Duke CPR App/en.lproj/MainStoryboard.storyboard
+++ b/Duke CPR App/en.lproj/MainStoryboard.storyboard
@@ -234,7 +234,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="PZO-lc-G7a" kind="push" identifier="Step4Segue" id="52A-WG-Gau"/>
+                                    <segue destination="bNQ-px-Dzz" kind="push" id="hzd-nD-BQF"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -249,51 +249,7 @@
             </objects>
             <point key="canvasLocation" x="1778" y="-146"/>
         </scene>
-        <!--Crisis Stage Five View Controller - Step 5-->
-        <scene sceneID="5ju-zd-ypH">
-            <objects>
-                <viewController id="PZO-lc-G7a" customClass="CrisisStageFiveViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="44y-JQ-1LO">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" textAlignment="center" id="kFb-iw-t1Y">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="222"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="22"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="m26-EW-S27">
-                                <rect key="frame" x="20" y="400" width="280" height="85"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES"/>
-                                <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="31"/>
-                                <state key="normal" title="Next">
-                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="bNQ-px-Dzz" kind="push" identifier="Step5Segue" id="kxu-K2-TGy"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" title="Step 5" id="X74-0d-XUh"/>
-                    <connections>
-                        <outlet property="textView" destination="kFb-iw-t1Y" id="Npu-oO-QlH"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="U7j-iz-Ep8" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2167" y="-146"/>
-        </scene>
-        <!--Crisis Stage Six View Controller - Step 6-->
+        <!--Crisis Stage Six View Controller - Step 5-->
         <scene sceneID="yIS-oO-01g">
             <objects>
                 <viewController id="bNQ-px-Dzz" customClass="CrisisStageSixViewController" sceneMemberID="viewController">
@@ -328,7 +284,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Step 6" id="Aas-pU-qG9"/>
+                    <navigationItem key="navigationItem" title="Step 5" id="Aas-pU-qG9"/>
                     <connections>
                         <outlet property="textView" destination="rhm-DL-nen" id="c4N-vg-U4e"/>
                     </connections>
@@ -337,7 +293,7 @@
             </objects>
             <point key="canvasLocation" x="2512" y="-146"/>
         </scene>
-        <!--Crisis Stage Seven View Controller - Step 7-->
+        <!--Crisis Stage Seven View Controller - Step 6-->
         <scene sceneID="VaX-1P-MDl">
             <objects>
                 <viewController id="aiT-zA-cx3" customClass="CrisisStageSevenViewController" sceneMemberID="viewController">
@@ -357,7 +313,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Step 7" id="Jgn-88-lbo">
+                    <navigationItem key="navigationItem" title="Step 6" id="Jgn-88-lbo">
                         <barButtonItem key="rightBarButtonItem" title="Done" style="done" id="7ft-40-KfC">
                             <connections>
                                 <action selector="doneButtonPressed:" destination="aiT-zA-cx3" id="44R-Vi-4Aj"/>
@@ -408,12 +364,6 @@
                 <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
             </relationships>
         </class>
-        <class className="CrisisStageFiveViewController" superclassName="GenericViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/CrisisStageFiveViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="textView" candidateClass="UITextView"/>
-            </relationships>
-        </class>
         <class className="CrisisStageFourViewController" superclassName="GenericViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/CrisisStageFourViewController.h"/>
             <relationships>
@@ -429,7 +379,6 @@
         <class className="CrisisStageSevenViewController" superclassName="GenericViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/CrisisStageSevenViewController.h"/>
             <relationships>
-                <relationship kind="action" name="doneButtonPressed:"/>
                 <relationship kind="outlet" name="textView" candidateClass="UITextView"/>
             </relationships>
         </class>
