--- a/Duke CPR App/en.lproj/MainStoryboard.storyboard
+++ b/Duke CPR App/en.lproj/MainStoryboard.storyboard
@@ -355,12 +355,66 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="usH-7k-ZpK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="154" y="562"/>
+            <point key="canvasLocation" x="-134" y="566"/>
         </scene>
     </scenes>
     <resources>
         <image name="Duke.logo.jpeg" width="221" height="109"/>
     </resources>
+    <classes>
+        <class className="AdditionalDataViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AdditionalDataViewController.h"/>
+        </class>
+        <class className="CrisisModeViewController" superclassName="GenericViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CrisisModeViewController.h"/>
+        </class>
+        <class className="CrisisStageFiveViewController" superclassName="CrisisModeViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CrisisStageFiveViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="textView" candidateClass="UITextView"/>
+            </relationships>
+        </class>
+        <class className="CrisisStageFourViewController" superclassName="CrisisModeViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CrisisStageFourViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="textView" candidateClass="UITextView"/>
+            </relationships>
+        </class>
+        <class className="CrisisStageOneViewController" superclassName="CrisisModeViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CrisisStageOneViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="textView" candidateClass="UITextView"/>
+            </relationships>
+        </class>
+        <class className="CrisisStageSixViewController" superclassName="CrisisModeViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CrisisStageSixViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="textView" candidateClass="UITextView"/>
+            </relationships>
+        </class>
+        <class className="CrisisStageThreeViewController" superclassName="CrisisModeViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CrisisStageThreeViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="textView" candidateClass="UITextView"/>
+            </relationships>
+        </class>
+        <class className="CrisisStageTwoViewController" superclassName="CrisisModeViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CrisisStageTwoViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="dial911:"/>
+                <relationship kind="outlet" name="textView" candidateClass="UITextView"/>
+            </relationships>
+        </class>
+        <class className="GenericViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GenericViewController.h"/>
+        </class>
+        <class className="HomeViewController" superclassName="GenericViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/HomeViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="crisisModeButton" candidateClass="UIButton"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
